--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </p>
         </div>
 
-        <div class="mt-10 invisible">
+        <div class="mt-10">
           <dl
             class="space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10"
           >
@@ -183,31 +183,15 @@
                 <div
                   class="absolute flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white"
                 >
-                  <!-- Heroicon name: outline/globe-alt -->
-                  <svg
-                    class="h-6 w-6"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke="currentColor"
-                    aria-hidden="true"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9"
-                    />
-                  </svg>
+                  <i class="fa fa-check"></i>
                 </div>
                 <p class="ml-16 text-lg leading-6 font-medium text-white">
-                  Competitive exchange rates
+                  Commits
                 </p>
               </dt>
               <dd class="mt-2 ml-16 text-base text-gray-500">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Maiores impedit perferendis suscipit eaque, iste dolor
-                cupiditate blanditiis ratione.
+                I practiced generating commits and am trying to implement the
+                naming convention; and using .gitignore
               </dd>
             </div>
 
@@ -216,31 +200,15 @@
                 <div
                   class="absolute flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white"
                 >
-                  <!-- Heroicon name: outline/scale -->
-                  <svg
-                    class="h-6 w-6"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke="currentColor"
-                    aria-hidden="true"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3"
-                    />
-                  </svg>
+                  <i class="fa fa-check"></i>
                 </div>
                 <p class="ml-16 text-lg leading-6 font-medium text-white">
-                  No hidden fees
+                  Branch
                 </p>
               </dt>
               <dd class="mt-2 ml-16 text-base text-gray-500">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Maiores impedit perferendis suscipit eaque, iste dolor
-                cupiditate blanditiis ratione.
+                Create multiple branches for practice with checkout, merge,
+                rename branch, delete branch, local and remote.
               </dd>
             </div>
 
@@ -249,31 +217,15 @@
                 <div
                   class="absolute flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white"
                 >
-                  <!-- Heroicon name: outline/lightning-bolt -->
-                  <svg
-                    class="h-6 w-6"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke="currentColor"
-                    aria-hidden="true"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M13 10V3L4 14h7v7l9-11h-7z"
-                    />
-                  </svg>
+                  <i class="fa fa-check"></i>
                 </div>
                 <p class="ml-16 text-lg leading-6 font-medium text-white">
-                  Transfers are instant
+                  Merge and conflicts
                 </p>
               </dt>
               <dd class="mt-2 ml-16 text-base text-gray-500">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Maiores impedit perferendis suscipit eaque, iste dolor
-                cupiditate blanditiis ratione.
+                Work with branchs generated me some problems when i execute the
+                merges. I had to manually read and resolve conflicts.
               </dd>
             </div>
 
@@ -282,31 +234,49 @@
                 <div
                   class="absolute flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white"
                 >
-                  <!-- Heroicon name: outline/annotation -->
-                  <svg
-                    class="h-6 w-6"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke="currentColor"
-                    aria-hidden="true"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z"
-                    />
-                  </svg>
+                  <i class="fa fa-check"></i>
                 </div>
                 <p class="ml-16 text-lg leading-6 font-medium text-white">
-                  Mobile notifications
+                  Tags version
                 </p>
               </dt>
               <dd class="mt-2 ml-16 text-base text-gray-500">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Maiores impedit perferendis suscipit eaque, iste dolor
-                cupiditate blanditiis ratione.
+                Ups, this a sample functión for show the versión master in your
+                repositore.
+              </dd>
+            </div>
+
+            <div class="relative">
+              <dt>
+                <div
+                  class="absolute flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white"
+                >
+                  <i class="fa fa-check"></i>
+                </div>
+                <p class="ml-16 text-lg leading-6 font-medium text-white">
+                  Github Pages
+                </p>
+              </dt>
+              <dd class="mt-2 ml-16 text-base text-gray-500">
+                Create a github page with my data using markdown and also this
+                page.
+              </dd>
+            </div>
+
+            <div class="relative">
+              <dt>
+                <div
+                  class="absolute flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white"
+                >
+                  <i class="fa fa-check"></i>
+                </div>
+                <p class="ml-16 text-lg leading-6 font-medium text-white">
+                  Actions
+                </p>
+              </dt>
+              <dd class="mt-2 ml-16 text-base text-gray-500">
+                I am learning continuous integration with github actions to
+                improve the testing proccess before deploying to production.
               </dd>
             </div>
           </dl>
