--- a/home.html
+++ b/home.html
@@ -14,6 +14,7 @@
     />
   </head>
   <body>
+    <!-- This example requires Tailwind CSS v2.0+ -->
     <div class="relative bg-white overflow-hidden">
       <div class="max-w-7xl mx-auto">
         <div
@@ -52,6 +53,7 @@
                       class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
                     >
                       <span class="sr-only">Close main menu</span>
+                      <!-- Heroicon name: outline/x -->
                       <svg
                         class="h-6 w-6"
                         xmlns="http://www.w3.org/2000/svg"
@@ -153,6 +155,7 @@
       </div>
     </div>
 
+    <!-- This example requires Tailwind CSS v2.0+ -->
     <div class="py-12 bg-slate-900">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="lg:text-center">
